# FModSDK

./: README.md
Android/api/core/examples/androidstudio/cmake/3d/app/src/main/cpp/: CMakeLists.txt
Android/doc/FMOD API User Manual/: core-api-common.html  core-api-geometry.html  platforms-ios.html  plugin-api-dsp.html  plugin-api.html  studio-api-bus.html  studio-api-eventdescription.html  studio-api.html  welcome-revision-history.html  welcome-whats-new-200.html  white-papers-non-blocking-sound-creation.html  white-papers-studio-3d-events.html  white-papers-studio-threads.html  white-papers-transitioning-from-fmodex.html
HTML5/doc/FMOD API User Manual/: core-api-channelcontrol.html  core-api.html  studio-api-eventinstance.html  studio-api-system.html  studio-guide.html  welcome-whats-new-108.html  white-papers-handle-system.html
IOS/doc/FMOD API User Manual/: core-api-channel.html  core-api-dspconnection.html  platforms-mac.html  studio-api-commandreplay.html  welcome-whats-new-109.html  white-papers-virtual-voices.html
Linux/doc/: revision.txt
Linux/doc/FMOD API User Manual/: core-api-dsp.html  core-api-platform-ios.html  glossary.html  platforms-android.html  platforms-html5.html  platforms.html  plugin-api-codec.html  plugin-api-output.html  white-papers-dsp-architecture.html  white-papers-memory-management.html  white-papers-spatial-audio.html
Mac/doc/: revision.txt
Mac/doc/FMOD API User Manual/: core-api-channelgroup.html  core-api-common-dsp-effects.html  core-api-reverb3d.html  fsbank-api.html  platforms-win.html  (+5 more)
Windows/doc/: revision.txt
(+357 files in other folders)
